--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint --ext .js src/",
     "stylelint": "stylelint --aei src/**/*.css",
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
-    "test": "jest --coverage",
+    "test": "jest --verbose --coverage",
     "start": "firebase serve --only hosting"
   },
   "devDependencies": {
